encryption/part2/gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  tcpGateway:
    tcpHosts:
      - name: http
        destination:
          single:
            upstream:
              name: http
              namespace: spelunker
  useProxyProto: false
